# tr_ros

./: .gitignore  LICENSE  README.md
tr/: CMakeLists.txt  package.xml
tr_bringup/: CMakeLists.txt  package.xml
tr_bringup/config/: servos.yaml
tr_bringup/launch/: tr_bringup.launch
tr_bringup/scripts/: tr_system
tr_control/: CMakeLists.txt  README.md  package.xml  setup.py
tr_control/nodes/: tr_control
tr_control/scripts/: tr_control
tr_control/src/tr_control/: controller.py  driver.py  main.py  robot.py
tr_hat_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
tr_hat_bridge/nodes/: tr_hat_bridge
tr_hat_bridge/scripts/: tr_hat_bridge
tr_hat_bridge/src/tr_hat_bridge/: bridge.py  frame.py  main.py  serial_comm.py  uart.py  utils.py
tr_hat_msgs/: CMakeLists.txt  package.xml
tr_hat_msgs/msg/: MotorPayload.msg  MotorPower.msg  ServoAngle.msg
tr_hat_msgs/srv/: GetBattery.srv  GetFirmwareVer.srv
tr_msgs/: CMakeLists.txt  package.xml
tr_shield_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
tr_shield_bridge/scripts/: tr_shield_bridge
tr_shield_bridge/src/tr_shield_bridge/: bridge.py  main.py  uart.py
tr_teleop/: CMakeLists.txt  README.md  package.xml
tr_teleop/config/: joy_mapping.yaml
tr_teleop/launch/: joy.launch  joy_logitech.launch
tr_teleop/nodes/: tr_teleop_joy  tr_teleop_key
tr_webui/: CMakeLists.txt  package.xml
tr_webui/launch/: webui.launch
tr_webui/www/: index.html
tr_webui/www/scripts/: stream.js  webui.js
tr_webui/www/styles/: webui.css
