<?xml version="1.0"?>
<package format="2">
  <name>tr</name>
  <version>0.0.0</version>
  <description>
    The tr meta package provides basic packages for running and using a Turtle Rover.
  </description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tr_hat_bridge</exec_depend>
  <exec_depend>tr_control</exec_depend>
  <exec_depend>tr_teleop</exec_depend>
  <exec_depend>tr_bringup</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>