<?xml version="1.0"?>
<package format="2">
  <name>tr_bringup</name>
  <version>0.0.0</version>
  <description>The tr_bringup package</description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tr_control</exec_depend>
  <exec_depend>tr_hat_bridge</exec_depend>
  <exec_depend>tr_webui</exec_depend>

</package>
