<?xml version="1.0"?>
<package format="2">
  <name>tr_bringup</name>
  <version>0.0.0</version>
  <description>The tr_bringup package</description>

  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tr_control</exec_depend>
  <exec_depend>tr_hat_bridge</exec_depend>

  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>gscam</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>

</package>
