<?xml version="1.0"?>
<package format="2">
  <name>tr_control</name>
  <version>0.0.0</version>
  <description>The tr_control package</description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
