<?xml version="1.0"?>
<package format="2">
  <name>tr_hat_bridge</name>
  <version>0.0.0</version>
  <description>The tr_hat_bridge package</description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tr_hat_msgs</exec_depend>

  <exec_depend>python-serial</exec_depend>

</package>
