<?xml version="1.0"?>
<package format="2">
  <name>tr_hat_bridge</name>
  <version>0.0.0</version>
  <description>The tr_hat_bridge package</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python-serial</exec_depend>
  <exec_depend>python-rpi.gpio</exec_depend>

</package>
