<?xml version="1.0"?>
<package format="2">
  <name>tr_hat_msgs</name>
  <version>0.0.0</version>
  <description>The tr_hat_msgs package</description>

  <maintainer email="pi@todo.todo">pi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>

</package>
