<?xml version="1.0"?>
<package format="2">
  <name>tr_teleop</name>
  <version>0.0.0</version>
  <description>The tr_teleop package</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
