<?xml version="1.0"?>
<package format="2">
  <name>tr_webui</name>
  <version>0.0.0</version>
  <description>The tr_teleop package</description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roswww</exec_depend>

</package>
